# encoding

./: .copier-answers.yml  Cargo.toml  README.md  act.toml  justfile
e2e/: decode.hurl  encode.hurl  info.hurl
skill/: SKILL.md
src/: lib.rs  text_or_bytes.rs
